src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
}
html, body, #root {
  height: 100%;
  margin: 0;
}

.parent {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(7, 1fr);
  gap: 8px;
  width: 100vw;
  height: 100vh;
  padding: 8px;
  text-align: center;
  background-color: black;
}

.header {
  grid-column: span 5 / span 5;
  border: 1px solid white;
  border-radius: 1rem 1rem 1rem 1rem;
  background-color: black;
  color: white;
  font-family: "Courier New", Courier, monospace;
  font-size: 3rem;
}

.sidebar {
  grid-row: span 5 / span 5;

  grid-row-start: 2;
  border-radius: 1rem 1rem 1rem 1rem;
  border: 2px solid transparent;
  background-image:
    linear-gradient(#000000cc, #000000cc), 
    linear-gradient(90deg, #00f5ff, #ff4ecd);
  background-origin: border-box;
  background-clip: padding-box, border-box;
}

.content {
    box-sizing: border-box;
  grid-column: span 4 / span 4;
  grid-row: span 5 / span 5;
  grid-row-start: 2;
  border-radius: 1rem 1rem 1rem 1rem;
  height: 100%;
  width: 100%;
  border: 2px solid transparent;
  background-image:
    linear-gradient(#000000cc, #000000cc), 
    linear-gradient(90deg, #00f5ff, #ff4ecd);
  background-origin: border-box;
  background-clip: padding-box, border-box;
  padding: 20px;
}

.footer {
  grid-column: span 5 / span 5;
  grid-row-start: 7;
  border: 1px solid white;
  border-radius: 1rem 1rem 1rem 1rem;
  background-color: black;
}

